examples/test/testpolicy10538.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10538
  namespace: namespace297
spec:
  podSelector:
    matchLabels:
      key28: value4
      key40: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value18
          key48: value12
          key49: value3
      podSelector:
        matchLabels:
          key36: value47
